--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
                     amet officia nulla aliquam, fugit dolorem suscipit facere inventore nihil fugiat doloremque doloribus culpa, accusamus asperiores?
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-End">
+            <img class="event__image" src="./images/ui-ux.png" alt="Front-End">
         </div>
     </section>
 
@@ -75,7 +75,7 @@
                     amet officia nulla aliquam, fugit dolorem suscipit facere inventore nihil fugiat doloremque doloribus culpa, accusamus asperiores?
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-End">
+            <img class="event__image" src="./images/data.png" alt="Front-End">
         </div>
     </section>
 
@@ -88,7 +88,7 @@
                     amet officia nulla aliquam, fugit dolorem suscipit facere inventore nihil fugiat doloremque doloribus culpa, accusamus asperiores?
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-End">
+            <img class="event__image" src="./images/backend.png" alt="Front-End">
         </div>
     </section>
 
